--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lint-staged": "^13.2.3",
     "simple-git-hooks": "^2.8.1",
     "typescript": "^5.1.6",
+    "unocss": "^0.53.5",
     "vite": "^4.4.3",
     "vite-plugin-dts": "^3.2.0",
     "vitepress": "1.0.0-beta.5",
