--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   ],
   "exports": {
     ".": {
-      "default": "./dist/index.js",
       "types": "./dist/types/index.d.ts",
+      "import": "./dist/index.js",
       "require": "./dist/index.cjs",
-      "import": "./dist/index.js"
+      "default": "./dist/index.js"
     },
     "./style": {
       "default": "./dist/style.css"
