--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Enable pnpm
-        run: corepack enable
+        run: npm i -g --force corepack corepack enable
       - name: Setup node
         uses: actions/setup-node@v4
         with:
